objects/UseCase__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extensions__c</fullName>
        <label>Extensions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Main_success_scenario__c</fullName>
        <inlineHelpText>How are you doing it?</inlineHelpText>
        <label>Main success scenario</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Preconditions__c</fullName>
        <label>Preconditions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseCaseId__c</fullName>
        <displayFormat>UC-{0000}</displayFormat>
        <label>UseCaseId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>UserStory__c</fullName>
        <label>UserStory</label>
        <referenceTo>UserStory__c</referenceTo>
        <relationshipLabel>UseCases</relationshipLabel>
        <relationshipName>UseCases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>UseCase</label>
    <nameField>
        <label>Use Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UseCases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>